--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "tailwindcss": "^3.1.0"
   },
   "dependencies": {
-    "@tailwindcss/typography": "^0.5.2"
+    "@tailwindcss/typography": "^0.5.2",
+    "photoswipe": "^5.2.7",
+    "photoswipe-dynamic-caption-plugin": "^1.1.1"
   }
 }
